# clutch

./: .env.prod.example  .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.tunnel.yml
clutch-backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
clutch-backend/.claude/rules/: api-contract.md  database.md  security.md
clutch-backend/alembic/: env.py
clutch-backend/alembic/versions/: 0001_initial.py  0002_user_preferences.py  0003_game_bg_url.py  0004_group_scope.py  0004_team_logo_url.py  0005_game_logo_url.py  0005_group_scope.py  0005_streams_and_roster.py  0006_game_full_logo_url.py  0006_match_veto.py  0006_players.py  0007_merge_heads.py  0007_player_role_length.py  0008_widen_group_game_ids.py  0009_merge_heads.py  0010_match_ff.py  0010_player_game_id.py  0011_match_ff.py
clutch-backend/app/: main.py
clutch-backend/app/api/: assets.py  auth.py  catalog.py  community.py  deps.py  webhook.py
clutch-backend/app/core/: config.py  db.py  security.py
clutch-backend/app/models/: base.py  catalog.py  community.py
clutch-backend/docs/: CONTRAT-API.md  postman-liquipedia-lpdb-v3.json
clutch-backend/ingestion/: finalize_seed_matches.py  liquipedia.py  normalize.py  note_seeding.md  seed_demo.py  seed_future_matches.py  worker.py
clutch-backend/scripts/: find_pagenames.py
clutch-backend/tests/: conftest.py  fixtures_front.py  test_assets_api.py  test_catalog_api.py  test_community_api.py  test_normalize.py  test_parity_front.py  test_scoring.py
(+177 files in other folders)
