[project]
name = "clutch-backend"
version = "0.1.0"
description = "API interne Clutch — calendrier EWC 2026 + communauté (ingestion Liquipedia via liquipydia)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "liquipydia==0.1.2",
    "PyJWT[crypto]>=2.9,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
